Added new test cases for coverage
Updated project, Added docker file, updated application.properties to application.yml

Added readme.md highlighting assumptions

refactor theatre

Added integration test

--- a/booking-service/src/main/resources/messages.properties
+++ b/booking-service/src/main/resources/messages.properties
@@ -1,3 +1,6 @@
 Exception.notFound=No Records Retrieved
-NotNull.bookingInfo.seatIds=Seat Ids should not be null
-NotNull.bookingInfo.showId=Show Id should not be null
+NotNull.booking.seatIds=Seat Ids should not be null
+NotNull.booking.showId=Show Id should not be null
+UnableToLock.insufficientInformation=Cannot perform booking. Insufficient information provided
+UnableToLock.staleData=The seats you are trying to book may not be available. Please refresh and try again.
+UnableToLock.incorrectData=Incorrect combination of seats provided
