--- a/booking-service/src/main/resources/messages.properties
+++ b/booking-service/src/main/resources/messages.properties
@@ -4,3 +4,4 @@ NotNull.booking.showId=Show Id should not be null
 UnableToLock.insufficientInformation=Cannot perform booking. Insufficient information provided
 UnableToLock.staleData=The seats you are trying to book may not be available. Please refresh and try again.
 UnableToLock.incorrectData=Incorrect combination of seats provided
+Exception.showInformation.notFound=No show information found for given show ID
